--- a/Client/sites/add.html
+++ b/Client/sites/add.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-  <title>RIA | Project</title>
+  <title>DistComp | Add</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <meta name="author" content="Wachter, Tomek, Wresnik, Wallner">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="/sites/scripts.js"></script>
 </head>
 
 <body>
@@ -17,15 +18,12 @@
 
       <br>
       <div>
-        german:
-        <br/>
+        german:<br/>
         <input name="german" id="german">
-        <br/>
-        <br/> english:
-        <br/>
+        <br/><br/>
+        english:<br/>
         <input name="english" id="english">
-        <br/>
-        <br/>
+        <br/><br/>
         <input type="button" value="add" onclick="addWord()" class="button brown">
       </div>
       <div id="done"></div>
@@ -36,7 +34,5 @@
       </form>
     </div>
   </div>
-  <script src="/sites/scripts.js"></script>
 </body>
-
 </html>
