--- a/Client/sites/index.html
+++ b/Client/sites/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>RIA | Project</title>
+    <title>DistComp | Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <meta name="author" content="Wachter, Tomek, Wresnik, Wallner">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" type="text/css" href="sites/style.css">
     <script src="/sites/scripts.js"></script>
 </head>
@@ -39,8 +39,6 @@
                          src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
                          alt="CSS ist valide!" />
                 </a>
-                <p id="geo"></p>
-                <script>window.onload=getLocation()</script>
             </p>
     </footer>
 </body>
