--- a/Client/sites/search.html
+++ b/Client/sites/search.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>RIA | Project</title>
+    <title>DistComp | Search</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <meta name="author" content="Wachter, Tomek, Wresnik, Wallner">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="/sites/scripts.js"></script>
 </head>
 
 <body>
@@ -29,6 +30,4 @@
         </div>
     </div>
 </body>
-<script src="/sites/scripts.js"></script>
-
 </html>
