--- a/server/sites/index.html
+++ b/server/sites/index.html
@@ -5,7 +5,7 @@
     <title>DistComp | Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Wachter, Tomek, Wresnik, Wallner">
+    <meta name="author" content="Tomek, Wresnik, Wallner">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" type="text/css" href="sites/style.css">
     <script src="/sites/scripts.js"></script>
