--- a/server/sites/index.html
+++ b/server/sites/index.html
@@ -17,14 +17,14 @@
             <p>SWDictionary</p>
         </div>
         <div class="display-topleft container xxlarge">
-            <form action="sites/remove.html" method="get" target="_self" class="form">
-                <button class="button brown">dictionary</button>
-            </form>
             <form action="sites/add.html" method="get" target="_self" class="form">
                 <button class="button brown">new word</button>
             </form>
             <form action="sites/search.html" method="get" target="_self" class="form">
                 <button class="button brown">search</button>
+            </form>
+            <form action="sites/remove.html" method="get" target="_self" class="form">
+                <button class="button brown">delete</button>
             </form>
         </div>
         <div class="display-bottomleft container xxlarge">
