--- a/server/sites/search.html
+++ b/server/sites/search.html
@@ -14,13 +14,14 @@
 <body>
     <div class="bgimg display-container text-white">
         <div class="display-middle xlarge">
-            <h1>Search</h1>
-
-            <br> Search:
+            <h1>Search a word</h1>
             <br/>
-            <input type="text" id="search" name="search">
-            <br/>
-            <button type="button" onclick="loadWord()" class="button brown">Search</button>
+            <div>
+                search:<br/>
+                <input type="text" id="search" name="search">
+                <br/><br/>
+                <button type="button" onclick="loadWord()" class="button brown">Search</button>
+            </div>
             <div id="word"></div>
         </div>
         <div class="display-topleft container xxlarge">
