--- a/server/sites/add.html
+++ b/server/sites/add.html
@@ -18,12 +18,12 @@
       <br/>
       <div>
         german:<br/>
-        <input name="german" id="german">
+        <input name="german" id="german" onfocus="this.value=''">
         <br/><br/>
         english:<br/>
-        <input name="english" id="english">
+        <input name="english" id="english" onfocus="this.value=''">
         <br/><br/>
-        <input type="button" value="add" onclick="addWord()" class="button brown">
+        <button type="button" value="add" onclick="addWord()" class="button brown">add</button>
       </div>
       <div id="done"></div>
     </div>
