--- a/server/sites/add.html
+++ b/server/sites/add.html
@@ -23,7 +23,7 @@
         english:<br/>
         <input name="english" id="english" onfocus="this.value=''">
         <br/><br/>
-        <button type="button" value="add" onclick="addWord()" class="button brown">add</button>
+        <button type="button" value="add" onclick="addWord()" class="button brown">Add</button>
       </div>
       <div id="done"></div>
     </div>
